--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,7 @@ dependencies {
 
     implementation'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    implementation'com.google.android.gms:play-services-maps:17.0.0'
+    implementation'com.google.android.gms:play-services-locations:17.1.0'
 }
